// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] interactions !editable renders \`errorText\` 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 2,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#C4C4C4",
        },
        {
          "borderBottomColor": "#C4C4C4",
        },
      ]
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#6D6D6D",
              "fontSize": 14,
              "paddingHorizontal": 4,
            },
            undefined,
          ],
          false,
          {
            "color": "#C4C4C4",
          },
        ]
      }
    >
      label
    </Text>
    <TextInput
      autoCapitalize="none"
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#C4C4C4",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions !editable renders \`labelText\` 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#C4C4C4",
        },
        {
          "borderBottomColor": "#C4C4C4",
        },
      ]
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#6D6D6D",
              "fontSize": 14,
              "paddingHorizontal": 4,
            },
            undefined,
          ],
          false,
          {
            "color": "#C4C4C4",
          },
        ]
      }
    >
      label
    </Text>
    <TextInput
      autoCapitalize="none"
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#C4C4C4",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions !editable renders without crashing 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#C4C4C4",
        },
        {
          "borderBottomColor": "#C4C4C4",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#C4C4C4",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render \`!editable\` status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render \`errorText\` 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render \`maxLength\` counter 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [boxed] should render without crashing 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default renders custom styles without crashing 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          {},
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            {},
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            {},
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default renders without crashing 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default should render \`maxLength\` counter 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] - default should render \`maxLength\` counter with error style 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render \`!editable\` status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render \`errorText\` 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render \`maxLength\` counter 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] should render without crashing 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          false,
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[EditText] interactions web renders without crashing 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      [
        [
          {
            "alignSelf": "stretch",
            "borderBottomColor": "#000000",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        {
          "borderColor": "#000000",
        },
        {
          "borderBottomColor": "#000000",
        },
      ]
    }
  >
    <TextInput
      autoCapitalize="none"
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      secureTextEntry={false}
      style={
        [
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          {
            "outlineWidth": 0,
          },
        ]
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#FF002E",
              "fontSize": 12,
              "marginTop": 8,
              "paddingHorizontal": 10,
            },
            undefined,
          ],
          {
            "color": "#FF002E",
            "flex": 1,
          },
        ]
      }
    />
  </View>
</View>
`;
